--- a/.gitmodules
+++ b/.gitmodules
@@ -4,6 +4,6 @@
 [submodule "jquery/jquery-source"]
 	path = jquery/jquery-source
 	url = http://github.com/jquery/jquery.git
-[submodule "Capital-Bikeshare"]
-	path = Capital-Bikeshare
+[submodule "2011-02-10/jquery-mobile"]
+	path = 2011-02-10/jquery-mobile
 	url = git://github.com/mikeymckay/Capital-Bikeshare.git
